Shopping List Feature Complete

--- a/index.html
+++ b/index.html
@@ -276,8 +276,8 @@
             </li>
 
             <li class="recipe__ingredient">
-              <svg class="recipe__icon">
-                <use href="./src/img/icons.svg#icon-check"></use>
+              <svg class="btn--tiny recipe__icon ">
+                <use href="./src/img/icons.svg#icon-plus"></use>
               </svg>
               <div class="recipe__quantity">0.5</div>
               <div class="recipe__description">
@@ -287,8 +287,8 @@
             </li>
           </ul>
           <h5 class="recipe__note">Click on <span>&plus;</span>
-              to add an ingredient to your shopping list
-          </h5>
+            to add an ingredient to <a href='./pages/shoppingList.html'>your shopping list</a>
+        </h5>
         </div>
 
         <div class="recipe__directions">
