--- a/index.html
+++ b/index.html
@@ -156,13 +156,27 @@
         </div>
 
         <p class="copyright">
-          &copy; Copyright by
+          &copy;
+          <a
+            class="twitter-link"
+            target="_blank"
+            href="https://forkify-v2.netlify.app/"
+            >Home page</a
+          >
+          designed and build by
           <a
             class="twitter-link"
             target="_blank"
             href="https://twitter.com/jonasschmedtman"
             >Jonas Schmedtmann</a
-          >.
+          >
+          in his JavaScript Course. Powered by
+          <a
+            class="twitter-link"
+            target="_blank"
+            href="https://www.instagram.com/aly.simion27/"
+            >Alexandra Simion</a
+          >
         </p>
       </div>
 
