--- a/index.html
+++ b/index.html
@@ -117,6 +117,18 @@
 
       <div class="search-results">
         <ul class="results">
+          <div class="message">
+            <div>
+              <svg>
+                <use href="src/img/icons.svg#icon-smile"></use>
+              </svg>
+            </div>
+            <p>
+              Start by searching for a recipe or add some items to
+              <a href="./pages/shoppingList.html">your shopping list</a>. Have
+              fun!
+            </p>
+          </div>
           <!-- 
           <li class="preview">
             <a class="preview__link preview__link--active" href="#23456">
@@ -170,7 +182,7 @@
             href="https://twitter.com/jonasschmedtman"
             >Jonas Schmedtmann</a
           >
-          in his JavaScript Course. Powered by
+          in his JavaScript Course. Version modified and improved by
           <a
             class="twitter-link"
             target="_blank"
@@ -181,13 +193,78 @@
       </div>
 
       <div class="recipe">
+        <section class="section section__features">
+          <h2 class="heading--2 u-margin-top">
+            What can you do in Forkify V2?
+          </h2>
+          <div class="features">
+            <div class="features__feature-box">
+              <div class="features__icon">
+                <svg>
+                  <use href="src/img/icons.svg#icon-search"></use>
+                </svg>
+              </div>
+              <h3 class="heading--3">Search over 1,000,000 recipes</h3>
+              <p class="features__description">
+                Bookmark them, add recipes to your weekly meal planner and
+                select what ingredients you need to buy. They will be waiting
+                for you in your shopping list!
+              </p>
+            </div>
+            <div class="features__feature-box">
+              <div class="features__icon">
+                <svg>
+                  <use href="src/img/icons.svg#icon-edit"></use>
+                </svg>
+              </div>
+              <h3 class="heading--3">Add your favorite recipes</h3>
+              <p class="features__description">
+                Give us an URL of your favorite recipe on the Internet, an URL
+                of its image and some more details. We will keep your dearest
+                recipes safe and handy!
+              </p>
+            </div>
+            <div class="features__feature-box">
+              <div class="features__icon">
+                <svg>
+                  <use href="src/img/icons.svg#icon-list"></use>
+                </svg>
+              </div>
+              <h3 class="heading--3">Personalise your shopping list</h3>
+              <p class="features__description">
+                Personal or recipe-selected ingredients can be gathered in your
+                easy-editable shopping list. You choose its title, the items and
+                their order. Download it or check the ingredients in the app.
+              </p>
+            </div>
+            <div class="features__feature-box">
+              <div class="features__icon">
+                <svg>
+                  <use href="src/img/icons.svg#icon-calendar"></use>
+                </svg>
+              </div>
+              <h3 class="heading--3">
+                Find all your future meals in one planner
+              </h3>
+              <p class="features__description">
+                Take time every monday to think about your nutritional goals for
+                the next week. Plan you meals carefully and never ask yourself
+                again "What should I eat today?"
+              </p>
+            </div>
+          </div>
+        </section>
         <div class="message">
           <div>
             <svg>
               <use href="src/img/icons.svg#icon-smile"></use>
             </svg>
           </div>
-          <p>Start by searching for a recipe or an ingredient. Have fun!</p>
+          <p>
+            Start by searching for a recipe or add some items to
+            <a href="./pages/shoppingList.html">your shopping list</a>. Have
+            fun!
+          </p>
         </div>
 
         <!-- <div class="spinner">
@@ -261,19 +338,19 @@
           <h2 class="heading--2">Nutritional data / serving</h2>
           <div class="recipe__nutrients">
             <div class="recipe__nutrient-field recipe__calories">
-              <h3 class="heading--3">Calories</h3>
+              <h3 class="heading--3 u-no-bottom-margin">Calories</h3>
               <span class="recipe__nutrient-value">340 kcal</span>
             </div>
             <div class="recipe__nutrient-field recipe__carbs">
-              <h3 class="heading--3">Carbs</h3>
+              <h3 class="heading--3 u-no-bottom-margin">Carbs</h3>
               <span class="recipe__nutrient-value">50 g</span>
             </div>
             <div class="recipe__nutrient-field recipe__proteins">
-              <h3 class="heading--3">Proteins</h3>
+              <h3 class="heading--3 u-no-bottom-margin">Proteins</h3>
               <span class="recipe__nutrient-value">20 g</span>
             </div>
             <div class="recipe__nutrient-field recipe__proteins">
-              <h3 class="heading--3">Fats</h3>
+              <h3 class="heading--3 u-no-bottom-margin">Fats</h3>
               <span class="recipe__nutrient-value">30 g</span>
             </div>
           </div>
