--- a/pages/shoppingList.html
+++ b/pages/shoppingList.html
@@ -23,10 +23,12 @@
   <body>
     <div class="container-pages">
       <header class="header">
-        <picture>
+        <!-- <picture>
           <source srcset="../src/img/favicon.png" media="(max-width:75em)" />
           <img srcset="../src/img/logo.png" alt="Full Logo" class="header__logo" />
-        </picture>
+        </picture> -->
+        <img src="../src/img/logo.png" alt="Logo" class="header__logo" />
+
         <div class="page-options page-options-end">
           <ul class="page-options__list">
             <li class="page-options__item">
