--- a/pages/mealPlanner.html
+++ b/pages/mealPlanner.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -23,11 +23,14 @@
   <body>
     <div class="container-pages container-pages__planner">
       <header class="header">
-        <img src="../src/img/logo.png" alt="Logo" class="header__logo" />
-        <!-- <picture>
-        <source srcset="../src/img/favicon.png" media="(max-width:75em)" />
-        <img srcset="../src/img/logo.png" alt="Full Logo" class="header__logo" />
-        </picture> -->
+        <figure class="header__logo">
+          <img
+            src="../src/img/favicon.png"
+            alt="Logo"
+            class="header__logo-img"
+          />
+          <figcaption class="header__logo-name">forkify</figcaption>
+        </figure>
         <div class="page-options page-options-end">
           <ul class="page-options__list">
             <li class="page-options__item">
@@ -42,7 +45,15 @@
             </li>
           </ul>
         </div>
-
+        <div class="slider">
+          <svg class="slider__icon--day">
+            <use href="../src/img/icons.svg#icon-sun"></use>
+          </svg>
+          <div class="slider__circle"></div>
+          <svg class="slider__icon--night">
+            <use href="../src/img/icons.svg#icon-moon"></use>
+          </svg>
+        </div>
         <div class="navigation">
           <input
             type="checkbox"
@@ -127,9 +138,7 @@
           </div>
           <div class="planner__grid">
             <div
-              class="
-                planner__recipe planner__recipe--11 planner__recipe--active
-              "
+              class="planner__recipe planner__recipe--11 planner__recipe--active"
             >
               <!-- <a class="planned__link" href="#23456">
                 <figure class="planned__fig">
@@ -139,19 +148,13 @@
               </a> -->
             </div>
             <div
-              class="
-                planner__recipe planner__recipe--12 planner__recipe--active
-              "
+              class="planner__recipe planner__recipe--12 planner__recipe--active"
             ></div>
             <div
-              class="
-                planner__recipe planner__recipe--13 planner__recipe--active
-              "
+              class="planner__recipe planner__recipe--13 planner__recipe--active"
             ></div>
             <div
-              class="
-                planner__recipe planner__recipe--14 planner__recipe--active
-              "
+              class="planner__recipe planner__recipe--14 planner__recipe--active"
             ></div>
             <div class="planner__recipe planner__recipe--21"></div>
             <div class="planner__recipe planner__recipe--22">
