--- a/pages/mealPlanner.html
+++ b/pages/mealPlanner.html
@@ -16,7 +16,6 @@
     />
 
     <link rel="stylesheet" href="../src/css/main.css" />
-    <script defer src="../src/js/controllerPlanner.js"></script>
 
     <title>forkify // Weekly meal planner</title>
   </head>
@@ -343,5 +342,6 @@
         </div>
       </section>
     </div>
+    <script src="../src/js/controllerPlanner.js"></script>
   </body>
 </html>
