--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@
 
     <link rel="stylesheet" href="src/css/main.css" />
 
-    <script defer src="src/js/controller.js"></script>
-
     <title>forkify // Search over 1,000,000 recipes</title>
   </head>
 
@@ -735,5 +733,6 @@
           />
         </div> -->
     </div>
+    <script src="src/js/controller.js"></script>
   </body>
 </html>
