--- a/pages/shoppingList.html
+++ b/pages/shoppingList.html
@@ -16,7 +16,7 @@
 
     <link rel="stylesheet" href="../src/css/main.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.js"></script>
-    <script defer src="../src/js/controllerList.js"></script>
+    
 
     <title>forkify // Shopping list</title>
   </head>
@@ -240,5 +240,6 @@
         </form>  -->
       </section>
     </div>
+    <script src="../src/js/controllerList.js"></script>
   </body>
 </html>
