fixed label bug

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="shortcut icon" href="src/img/favicon.png" type="image/x-icon" />
 
     <link rel="stylesheet" href="src/css/main.css" />
+    <script defer src="src/js/controller.js"></script>
 
     <title>forkify // Search over 1,000,000 recipes</title>
   </head>
@@ -733,6 +734,5 @@
           />
         </div> -->
     </div>
-    <script src="src/js/controller.js"></script>
   </body>
 </html>
