--- a/pages/mealPlanner.html
+++ b/pages/mealPlanner.html
@@ -6,17 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link
-      href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,600,700"
-      rel="stylesheet"
-    />
-    <link
       rel="shortcut icon"
       href="../src/img/favicon.png"
       type="image/x-icon"
     />
 
     <link rel="stylesheet" href="../src/css/main.css" />
-
+    <script defer src="../src/js/controllerPlanner.js"></script>
     <title>forkify // Weekly meal planner</title>
   </head>
   <body>
@@ -342,6 +338,5 @@
         </div>
       </section>
     </div>
-    <script src="../src/js/controllerPlanner.js"></script>
   </body>
 </html>
